<resources>
	<string name="pup">Product/Service provider</string>
	<string name="organizer">Organizer</string>
	<string name="admin">Admin</string>
	<string name="user">User</string>
	<string name="provider">Provider</string>
  <string name="upload_profile_picture">Upload profile picture (Optional)</string>
  <string name="upload_pictures_text">Please upload images of your company/agency/store/organization, that you would like displayed on your profile.</string>
  <string name="continue_without_an_account">Continue without an account</string>
  <string name="loading">Loading..</string>
  <string name="edit_profile">Edit profile</string>
  <string name="my_events">My events</string>
  <string name="my_products">My products</string>
  <string name="my_services">My services</string>
	<string name="upload_pictures">Upload images (Optional)</string>
	<string name="provide_company_info">Please provide us with information about your company/agency/store/organization.</string>
	<string name="provide_personal_info">Please provide us with some of your personal information</string>
	<string name="registration_text">I wish to be a...</string>
	<string name="app_name">EventHopper</string>
	<string name="splash_screen_image_description">Splash Screen Logo</string>
	<string name="EventHopper">EventHopper</string>
	<string name="todo">TODO</string>
	<string name="view_more">View more</string>
	<string name="top_events_header1">Get ready to experience the best of what is happening near you!</string>
	<string name="top_events_header2">We have handpicked the top 5 events for you to explore.</string>
	<string name="top_services_header1">You\'re searching for trusted services, exclusive products, or simply exploring?</string>
	<string name="top_services_header2">Check out the top 5 services and products your area has to offer!\n</string>
	<string name="jennet_and_john_wedding">Jennet and John wedding</string>
	<string name="wedding_secondary">BlackStone hall</string>
	<string name="wedding_supporting">Welcome to Jennet and John’s wedding celebration! Join us and the family at the BlackStone Hall…</string>
	<string name="concert_title">Taylor Swift concert</string>
	<string name="concert_secondary">New York city</string>
	<string name="concert_supporting">Spend the most incredible night of your life in NYC</string>
	<string name="catering_title">Catering “Food Hoppers”</string>
	<string name="catering_secondary">City St Johnsons, Bristol</string>
	<string name="catering_description">Enjoy the most incredible food prepared by the finest of chefs! Have your event be known for the incredible local as well as foreign..</string>
	<string name="all_events_title">Explore all events</string>
	<string name="searchbar_hint">Search </string>
	<string name="filterButton">filter button</string>
	<string name="backArrowButton">button for going back</string>
	<string name="forwardArrowButton">button for going forward</string>
	<string name="pageLabel">1/10</string>
	<string name="chatbutton">floating button for chat</string>
	<string name="all_solutions_title">Explore all services/products</string>
	<string name="login_welcome">Effortlessly Bringing Plans to Life, one step away</string>
	<string name="login_btn_text">Login</string>
	<string name="next">Next</string>
	<string name="register">Register</string>
	<string name="confirm_email">A verification email has been sent to the provided address. It may take a few minutes to arrive.
    Make sure to check you spam and junk folder!
    \n\n\n
    Once you’ve received the email, click on the link, log in and enjoy the great benefits of your new account!
    </string>
	<string name="back_to_login">Back to login</string>
	<string name="input_password">Password</string>
	<string name="input_password_again">Password (Again)</string>
	<string name="input_phone_number">Phone number</string>
	<string name="input_email">Email</string>
	<string name="input_name">Name</string>
	<string name="input_surname">Surname</string>
	<string name="input_city">City</string>
	<string name="input_address">Address</string>
	<string name="input_description">Description</string>
	<string name="password_rule">Password must be 8+ characters, include at least one uppercase, lowercase and number.</string>
	<string name="register_dont_have_account">You don\'t have an account?</string>
	<string name="register_create_one">Create one</string>
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="service_card_image">service card image</string>
	<string name="pup_create_service">pup create service</string>
	<string name="create_service">Create Service</string>
	<string name="edit_service">Edit Service</string>
	<string name="name">Name</string>
	<string name="description">Description</string>
	<string name="category">Category</string>
	<string name="event_types">Event Types</string>
	<string name="duration_minutes">Duration (Minutes)</string>
	<string name="reservation_window_days">Reservation Window (days)</string>
	<string name="cancellation_window_days">Cancellation Window (days)</string>
	<string name="visible">Visible</string>
	<string name="available">Available</string>
	<string name="auto_accept">Auto Accept</string>
	<string name="price">Price</string>
	<string name="discount">Discount</string>
	<string name="back">Back</string>
	<string name="create">Create</string>
	<string name="save">Save</string>
	<string name="event_type">Event Type</string>
	<string name="availability">Availability</string>
	<string name="apply">Apply</string>
	<string name="suggest_new_category">Suggest new category</string>
	<string name="suggested_categroy_name">Suggested categroy name</string>
	<string name="choose_location">Choose location</string>
	<string name="choose_eventtype">Choose event type</string>
	<string name="choose_category">Choose category</string>
	<string name="filter_by">Filter By</string>
	<string name="date">Date</string>
	<string name="sort_by">Sort By</string>
	<string name="products">Products</string>
	<string name="services">Services</string>
	<string name="notification_title">Notifications</string>
	<string name="mute">MUTE</string>
	<string name="for_product">For product:</string>
	<string name="categories">Categories</string>
	<string name="suggestions">Suggestions</string>
	<string name="create_category_button">create category button</string>
	<string name="explore_events">Events</string>
	<string name="explore_solutions">Services/products</string>
	<string name="unavailable">UNAVAILABLE</string>
	<string name="image">Image</string>
	<string name="profile_picture">profile picture</string>
	<string name="favorites_icon">favorites icon</string>
	<string name="product_provider">"Product provider: "</string>
	<string name="service_provider">"Service provider: "</string>
	<string name="block">BLOCK</string>
	<string name="report">REPORT</string>
	<string name="oops_something_went_wrong_please_try_again_later">Oops! Something went wrong.\n Please try again later.</string>
	<string name="loading_provider_details">Loading provider details...</string>
	<string name="loading_product_service_details">Loading product/service details...</string>
	<string name="loading_categories">Loading categories...</string>
	<string name="loading_event_types">Loading event types...</string>
	<string name="loading_suggestions">Loading suggestions...</string>
	<string name="choose_availability">Choose availability</string>
	<string name="loading_prices">Loading prices...</string>
	<string name="clear">Clear</string>
	<string name="enter_email_address">Enter email address</string>
	<string name="new_user">New user</string>
	<string name="invite_people">Invite people</string>
	<string name="provide_emails">Please, enter email addresses to invite</string>
	<string name="loading_services">Loading services...</string>
	<string name="images_are_required">Images are required</string>
	<string name="upgrading_text">Choose what you want to become</string>
	<string name="upgrading_successful">Upgrading successful!\n Please login</string>
	<string name="successful_email_confirmed_title">Congratulations!</string>
	<string name="successful_email_confirmed_text">Your account has been verified. You can now log in and start using your account.</string>
	<string name="expired_email_confirmed_title">Oops! Too late...!</string>
	<string name="expired_email_confirmed_text">Your verification expired, please re-register.</string>
	<string name="missing_email_confirmed_title">Oops! Something went wrong...</string>
	<string name="missing_email_confirmed_text">We couldn\'t find your account, your account may have been suspended or already verified.</string>
	<string name="rating">Rating</string>
	<string name="comment">Comment</string>
	<string name="close_chat">Close chat</string>
	<string name="loading_conversations">Loading conversations...</string>
	<string name="type_your_message">Type your message...</string>
	<string name="send">Send</string>
	<string name="you_need_more_info_chat_with_us">You need more info? Chat with us!</string>
	<string name="want_to_share_your_opinion_leave_a_review">Leave a review!</string>
	<string name="company">Company</string>
	<string name="change_password">Change password</string>
	<string name="log_out">Log out</string>
	<string name="deactivate_profile">Deactivate profile</string>
	<string name="manage_categories">Manage categories</string>
	<string name="remove_profile_picture">Remove profile picture</string>
	<string name="upload_new_profile_picture">Upload New profile picture</string>
	<string name="favorites_no_events">You have not favorited any events yet.</string>
	<string name="favorites_no_solutions">You haven\'t favorited any products/services yet.</string>
	<string name="log_in">Log in</string>
	<string name="please_login">To view profile and access all \n user benefits, please login.</string>
	<string name="manage_event_types">Manage event types</string>
	<string name="view_my_events">View my events</string>
	<string name="upgrade_profile">Upgrade profile</string>
	<string name="role">Role</string>
	<string name="manage_photos">Manage photos</string>
	<string name="manage_comments">Manage comments</string>
	<string name="new_password">New Password</string>
	<string name="old_password">Old Password</string>
	<string name="new_password_again">New Password (Again)</string>
	<string name="export_to_pdf">Export to PDF</string>
	<string name="loading_comments">Loading comments...</string>
    <string name="amount">Amount (€)</string>
    <string name="buy_now">Buy now!</string>
    <string name="loading_reports">Loading reports...</string>
    <string name="reporter">Reporter:</string>
    <string name="reported">"Reported: "</string>
    <string name="reason">"Reason: "</string>
    <string name="manage_reports">Manage reports</string>
    <string name="troubled_user">If user want to report or block user</string>
    <string name="block_user">Block user</string>
    <string name="report_user">Report user</string>
	<string name="export_event_data_to_pdf">Export event data to pdf</string>
	<string name="export_prices_to_pdf">Export prices to PDF</string>
	<string name="chat_with_organizer">Chat with Organizer</string>
	<string name="previous">Previous</string>
	<string name="month_year">Month Year</string>
	<string name="week_view">Week View</string>
	<string name="events_calendar_colors">Your events are colored yellow, your attending events are blue and when multiple events are scheduled theyre purple.</string>
	<string name="done">Done</string>
	<string name="create_event_type_button">Create Event Type button</string>
	<string name="you_have_not_created_any_events_yet">You have not created any events yet.</string>
	<string name="check_out_all_the_amazing_events_you_ve_created_with_eventhopper">Check out all the amazing events you\'ve created with EventHopper!</string>
	<string name="create_new_event">Create new event</string>
</resources>