<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/theme_blue"
    android:padding="0dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="690dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:padding="28dp">


        <ImageView
            android:layout_width="87dp"
            android:layout_height="74dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@null"
            android:paddingBottom="10dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/new_user"
            android:textAlignment="center"
            android:textAppearance="@style/WhiteHeaderText" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/provide_personal_info"
            android:textAlignment="center"
            android:textAppearance="@style/WhiteRegularText" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_email_layout"
            style="@style/BlueBackgroundInputField"
            app:boxBackgroundColor="@color/md_theme_secondaryContainer"
            app:boxStrokeColor="@color/white"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_email"
                android:textAppearance="@style/WhiteRegularText" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_password_layout"
            style="@style/BlueBackgroundInputField"
            app:boxBackgroundColor="@color/md_theme_secondaryContainer"
            app:boxStrokeColor="@color/white"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            app:errorEnabled="true"
            app:helperText="@string/password_rule"
            app:helperTextEnabled="true"
            app:helperTextTextAppearance="@style/WhiteRegularText"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:textAppearance="@style/WhiteRegularText"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:cursorColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_password_again_layout"
            style="@style/BlueBackgroundInputField"
            app:boxBackgroundColor="@color/md_theme_secondaryContainer"
            app:boxStrokeColor="@color/white"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            app:errorEnabled="true"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_password_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_password_again"
                android:inputType="textPassword"
                android:textAppearance="@style/WhiteRegularText"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:cursorColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_name_layout"
            style="@style/BlueBackgroundInputField"
            app:boxBackgroundColor="@color/md_theme_secondaryContainer"
            app:boxStrokeColor="@color/white"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_name"
                android:textAppearance="@style/WhiteRegularText" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_surname_layout"
            style="@style/BlueBackgroundInputField"
            app:boxBackgroundColor="@color/md_theme_secondaryContainer"
            app:boxStrokeColor="@color/white"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_surname"
                android:textAppearance="@style/WhiteRegularText" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_btn"
        style="@style/DarkButton"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="25dp"
        android:text="@string/next"
        />
</RelativeLayout>
